a little late on this commit, have implemented html and css for the nav bar, the header, new-tweet area, and the for old tweets. have js that loads in old tweets. have js that keeps track and displays the number of characters in your tweet.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -18,6 +18,17 @@ body {
   color: #545149;
   background-color: #f4f1ec;
   font-size: 24px;
+  font-family: 'Source Sans Pro', sans-serif;
+  z-index: 1;
+}
+
+main {
+  margin: auto;
+  position: relative;
+  top: 520px;
+  width: 90%;
+  background-color: inherit;
+  z-index: 2;
 }
 
 /*
