--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -12,8 +12,30 @@ nav span {
   font-family: 'Bungee', sans-serif;
 }
 
+nav .stacked {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#showTweeter {
+  background-color: transparent; 
+  border: none;
+  animation-name: arrow;
+  animation-duration: 0.6s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: ease-in-out;
+  outline: none;
+}
+
 .nav-content {
   display: flex;
   margin: 1.5em;
   justify-content: space-between;
+}
+
+@keyframes arrow {
+  0% {transform: translate(0px, -5px)}
+  100% {transform: translate(0px, 0px)}
 }
