--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,11 +1,12 @@
 header {
-  height: 400px;
+  height: 520px;
   width: 100%;
   position: absolute;
-  top: 120px;
+  top: 0px;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: flex-end;
+  align-items: center;
   background-color: #d99e34;
   background-image: url(../images/asfalt-light.png);
   z-index: 3;
@@ -13,7 +14,7 @@ header {
 
 
 #profile-pic {
-  margin: auto;
+  padding-bottom: 20px;
   width: 256px;
 }
 
@@ -23,4 +24,14 @@ header {
 
 header h2 {
   margin-block-start: 0;
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Desktop styles */
+@media only screen and (min-width: 1024px) {
+  
 }
