--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -3,7 +3,7 @@ nav {
   width: 100%;
   position: fixed;
   top: 0;
-  background-color: #4056A1;
+  background-color: transparent;
   color: #FFFFFF;
   z-index: 100;
 }
@@ -16,6 +16,10 @@ nav .stacked {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+nav .stacked span {
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
 #showTweeter {
@@ -38,4 +42,17 @@ nav .stacked {
 @keyframes arrow {
   0% {transform: translate(0px, -5px)}
   100% {transform: translate(0px, 0px)}
+}
+
+
+/* Tablet Styles */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Desktop styles */
+@media only screen and (min-width: 1024px) {
+  nav {
+  background-color: #4056A1;
+  };
 }
