--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -13,6 +13,15 @@ html {
 /*
  * Global layout stuff
  */
+#backNav {
+  height: 120px;
+  z-index: 4;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  background-color: #d99e34;
+  background-image: url(../images/asfalt-light.png);
+}
 
 body {
   color: #545149;
@@ -20,17 +29,48 @@ body {
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-items: flex-start;
 }
 
 main {
   margin: auto;
-  position: relative;
-  top: 520px;
   width: 90%;
   background-color: inherit;
   z-index: 2;
 }
 
+#content {
+  display: flex;
+  flex-direction: column;
+  justify-items: flex-start;
+}
+
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
+ /* Tablet Styles */
+@media only screen and (min-width: 768px) {
+
+}
+
+/* Desktop styles */
+@media only screen and (min-width: 1024px) {
+  main {
+    width: 50%;
+    margin: auto;
+    padding-top: 120px;
+  }
+
+  #content {
+    flex-direction: row;
+  }
+
+  #placeholder {
+    width: 30%;
+    height: auto;
+    margin: auto 0;
+    margin-left: 50px;
+  }
+}
