--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,25 +1,11 @@
+/* style sheet for section where new tweets are created */
 .new-tweet {
   padding-bottom: 1em;
-  /* height: 0px; */
   overflow: hidden;
   display: none;
-  /* transition: height 0.7s; */
 }
 
-#tweet-zone textarea {
-  border-style: none;
-  border-bottom-style: solid;
-  border-bottom-width: 5px;
-  border-color: #545149;
-  background-color: inherit;
-  width: 100%;
-  resize: none;
-  color: black;
-  font-weight: bold;
-  margin-bottom: 5px;
-  /* font-size: 1em; */
-}
-
+/* error message class, only used in the new-tweet section */
 .errorMessage {
   display: none;
   border: 5px solid red;
@@ -31,6 +17,21 @@
   margin-top: 1em;
 }
 
+/* text area for tweet */
+#tweet-zone textarea {
+  border-style: none;
+  border-bottom-style: solid;
+  border-bottom-width: 5px;
+  border-color: #545149;
+  background-color: inherit;
+  width: 100%;
+  resize: none;
+  color: black;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+/* submit button */
 #tweet-zone input {
   float: left;
   background-color: #4056A1;
@@ -41,17 +42,13 @@
   font-family: 'Bungee', sans-serif;
 }
 
+/* counter */
 #tweet-zone span {
   float: right;
   font-family: 'Bungee', sans-serif;
 }
 
+/* class that is added to the counter using jQuery */
 .red {
   color: red;
-}
-
-
-.toggle {
-  height: 210px;
-  transition: height 0.7s;
 }
