--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,3 +1,4 @@
+/* css style sheets for the header */
 header {
   height: 400px;
   width: 100%;
@@ -10,7 +11,6 @@ header {
   z-index: 5;
 }
 
-
 #profile-pic {
   padding-bottom: 20px;
   width: 256px;
@@ -20,17 +20,14 @@ header {
   text-align: center;
 }
 
+/* resets the default h2 margin for nicer spacing */
 header h2 {
   margin-block-start: 0;
 }
 
-/* Tablet Styles */
-@media only screen and (min-width: 768px) {
-
-}
-
 /* Desktop styles */
 @media only screen and (min-width: 1024px) {
+  /* changes the dimensions/margins for floating next to main  */
   header {
     width: 30%;
     height: auto;
