--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -1,8 +1,58 @@
+/* css style sheet for templated tweets that are addedin app.js */
 .old-tweets {
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
+/*tweet template container */
+article {
+  border: 3px solid #545149;
+  width: 100%;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 300;
+  margin: 20px 0px;
+}
+
+/* contains profile and tag */
+article header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  height: 30%;
+  width: 95%;
+  margin: 10px 10px 0px 10px;
+  position: relative;
+  top: 0;
+  background-color: transparent;
+}
+
+/* flex container for name and pic */
+.tweeter-profile {
+  margin: auto 0px;
+  display: flex;
+  align-items: center;
+}
+
+.tweeter-name {
+  margin: auto 0;
+  padding-left: 5px;
+}
+
+.tweeter-pic {
+  height: 60px;
+  width: 60px;
+}
+
+.tweeter-tag {
+  opacity: 0;
+  font-weight: 600;
+  margin: auto 0px;
+  padding-bottom: 3px;
+  transition: opacity 0.1s;
+}
+
+/* container for tweet-text */
 .tweet-textbox {
   border: 0px solid #545149;
   border-width: inherit;
@@ -18,59 +68,8 @@
   font-weight: inherit;
   padding: 0px 10px;
 }
-article {
-  border: 3px solid #545149;
-  width: 100%;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 300;
-  margin: 20px 0px;
-}
 
-article .load {
-  opacity: 0;
-}
-article .show {
-  opacity: 1;
-  transition: opacity 3s;
-}
-
-article header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  height: 30%;
-  width: 95%;
-  margin: 10px 10px 0px 10px;
-  position: relative;
-  top: 0;
-  background-color: transparent;
-}
-
-.tweeter-name {
-  margin: auto 0;
-  padding-left: 5px;
-}
-
-.tweeter-profile {
-  margin: auto 0px;
-  display: flex;
-  align-items: center;
-}
-
-.tweeter-tag {
-  opacity: 0;
-  font-weight: 600;
-  margin: auto 0px;
-  padding-bottom: 3px;
-  transition: opacity 0.1s;
-}
-
-.tweeter-pic {
-  height: 60px;
-  width: 60px;
-}
-
+/* contains date and icons */
 article footer {
   height: 40px;
   width: 100%;
@@ -91,6 +90,7 @@ article footer {
   padding-left: 23px;
 }
 
+
 .tweet-icons {
   margin: auto 0;
   height: 50%;
@@ -100,17 +100,20 @@ article footer {
   transition: opacity 0.1s; 
 }
 
+/* adds shadow and bolds text */
 article:hover {
   font-weight: 400;
   box-shadow: 5px 5px 3px #545149;
   transition: box-shadow 0.3s, border-width 0.3s;
 }
 
+/* makes tag visible */
 article:hover .tweeter-tag {
   opacity: 0.4;
   transition: opacity 0.3s;
 }
 
+/* makes icons visible */
 article:hover .tweet-icons {
   opacity: 1;
   transition: opacity 0.3s;
