changed some names to match hyphen style consistency, took some screeshots for docs

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -6,7 +6,7 @@
 }
 
 /* error message class, only used in the new-tweet section */
-.errorMessage {
+.error-message {
   display: none;
   border: 5px solid red;
   color: red;
