one more name from camel-case to hyphens, added a dependency to the readme

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -33,7 +33,7 @@ nav .stacked span {
 }
 
 /* toggle button, with animation */
-#showTweeter {
+#show-tweeter {
   background-color: transparent; 
   border: none;
   animation-name: arrow;
